--- a/style.css
+++ b/style.css
@@ -1,1 +1,25 @@
-.body {}
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+    margin: 0; 
+    padding: 0;
+  }
+  html {
+    scroll-behavior: smooth; 
+  }
+
+  .main {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+.section{
+    max-width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
