--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,200&display=swap');
 body {
     display: flex;
     flex-direction: column;
@@ -5,6 +6,7 @@ body {
     min-height: 100vh;
     margin: 0; 
     padding: 0;
+    background-color: rgb(245, 230, 239);
   }
   html {
     scroll-behavior: smooth; 
@@ -21,5 +23,26 @@ body {
     max-width: 350px;
     margin-left: auto;
     margin-right: auto;
+    
 
+}
+.header{
+    display: flex;
+    flex-direction: row;
+    margin-left: 80px;
+    margin-top: 24px;
+    margin-right: 80px;
+    
+}
+.name{
+    margin-right: 86px;
+}
+p{
+    font-size: 18px;
+}
+ul{
+    font-size: 18px;
+}
+.photo{
+    border-radius: 115px;
 }
