--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
     background-color: rgb(245, 230, 239);
     font-family: 'Montserrat', sans-serif;
     color: rgb(65, 63, 64);
+    background-image: url(design.png);
+    background-size: 80% 100%;
   }
   html {
     scroll-behavior: smooth; 
